Modification of the way to display the dates of the elements in the resume

--- a/certificates/2018-05-cambridge.qmd
+++ b/certificates/2018-05-cambridge.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Cambridge Advanced Certificate"
-subtitle: "Certificate obtained at ISEN Méditerranée"
+subtitle: "Certificate obtained at ISEN Méditerranée<br/>2018"
 description: "Score: 189"
 date: "2018-05"
 image: "2018-05-cambridge.png"
