--- a/experiences/2019-05-dfj.qmd
+++ b/experiences/2019-05-dfj.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Dassault Falcon Jet, Little Rock"
-subtitle: "4 Months Internship"
+subtitle: "Internship<br/>May 2019 - October 2019"
 description: "Redesign of the MIS Self Service Portal with Angular and Clarity Design System"
 date: "2019-05-20"
 categories: [webdev, angular, clarity, typescript, c#]
