--- a/certificates/2016-05-voltaire.qmd
+++ b/certificates/2016-05-voltaire.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Certificat Voltaire"
-subtitle: "Certificate obtained at ISEN Méditerranée"
+subtitle: "Certificate obtained at ISEN Méditerranée<br/>2016"
 description: "Score: 792"
 date: "2016-05"
 image: "2016-05-voltaire.jpg"
