--- a/certificates/2018-12-toeic.qmd
+++ b/certificates/2018-12-toeic.qmd
@@ -1,6 +1,6 @@
 ---
 title: "TOEIC"
-subtitle: "Certificate obtained at ISEN Méditerranée"
+subtitle: "Certificate obtained at ISEN Méditerranée<br/>2018"
 description: "Score: 970"
 date: "2018-12"
 image: "2018-12-toeic.jpg"
