--- a/experiences/2020-03-cea.qmd
+++ b/experiences/2020-03-cea.qmd
@@ -1,6 +1,6 @@
 ---
 title: "CEA LIST, Grenoble"
-subtitle: "6 Months Internship"
+subtitle: "Internship<br/>March 2020 - October 2020"
 description: "Studying Generative Neural Networks to optimize a Knowledge Transfer Method"
 date: "2020-03-08"
 categories: [ai, python, autoencoders, knowledge-transfer]
